# oc-pmc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
analysis/: main.py  rate_incontext.py  rate_themesim.py  rate_word_position.py
analysis/oc_pmc/: __init__.py  load.py
analysis/oc_pmc/analysis/: cohens_d.py  demographic_stats.py  extract_theme_words.py  krippendorf_alpha.py  unique_section_words.py  word_position.py  word_stats.py
analysis/oc_pmc/convert/: exp_to_csv.py
analysis/oc_pmc/do_import/: data_carver_original_buddhika.py  linger_fa_dark_bedroom.py  linger_interference_end_pause.py  linger_interference_geometry.py  linger_interference_pause.py  linger_interference_situation.py  linger_interference_story_spr.py  linger_interference_story_spr_end.py  linger_interference_tom.py  linger_multi_day.py  linger_neutralcue2.py  linger_volition_button_press.py  linger_volition_button_press_suppress.py  linger_volition_suppress.py  manuscript.py
analysis/oc_pmc/exclusions/: __init__.py  analyze.py  linger_fa_dark_bedroom.py  linger_interference_end_pause.py  linger_interference_geometry.py  linger_interference_pause.py  linger_interference_situation.py  linger_interference_story_spr.py  linger_interference_story_spr_end.py  linger_interference_tom.py  linger_multi_day.py  linger_neutralcue2.py  linger_volition_button_press.py  linger_volition_button_press_suppress.py  linger_volition_suppress.py  utils.py
analysis/oc_pmc/export/: field_for_annotation.py  fields.py  words.py  words_additional.py  words_to_rate.py
analysis/oc_pmc/import_data/: import_data.py  import_data_buddhika.py  import_data_json.py  load_study_data.py  load_study_data_json.py  map_ids.py  utils.py  utils_buddhika.py
analysis/oc_pmc/model_objects/: model_glove.py  model_object.py
analysis/oc_pmc/plot/: __init__.py  by_time_shifted.py  categorical_measure.py  distribution.py  example_wc.py  numeric_measure.py  scatter_measures.py  word_position.py
analysis/oc_pmc/scripts/: correct_words.py  rate_wordchains.py
analysis/oc_pmc/simulate/: rated_wordchains.py
analysis/oc_pmc/stat/: __init__.py  correlate_two.py  difference_bin_means.py  sr_two.py  te_two.py  test_mlm.py  test_multiple.py  test_two.py  utils.py
analysis/oc_pmc/utils/: __init__.py  aggregation_example.py  aggregator.py  bootstrap.py  conditions_iterator.py  rate_wordchains.py  types.py
conditions/psiturk-based/linger-volition/: README.md  config.txt  custom.py  (+1 more)
data/corrections/: corrections.csv  discarded.csv  processed.csv
data/prompts/: davis_original.txt
(+395 files in other folders)
