[tool.poetry]
name = "oc-pmc"
version = "0.1.0"
description = "Code & data accompanying the paper by Kressin Palacios, G, Bellana, B, and Honey, C. J."
authors = ["Gabriel Kressin Palacios <gkressi1@jhu.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "oc_pmc", from = "analysis" },
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
pandas = "^2.3.0"
python-dotenv = "^1.1.1"
plotly = "6.0"
kaleido = "0.2.1"
scipy = "1.13.1"
rich = "^14.0.0"
pre-commit = "^4.2.0"
ruff = "^0.12.1"
tqdm = "^4.67.1"
statsmodels = "^0.14.4"
scikit-learn = "1.5"
krippendorff = "^0.8.1"
jinja2 = "^3.1.6"
pyspellchecker = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]
