[project]
name = "oc-pmc"
version = "2.0.0a2"
description = "Code & data accompanying the paper by Kressin Palacios, G, Ouyang, T, Bellana, B, and Honey, C. J."
authors = [
    { name = "Gabriel Kressin Palacios", email = "gabriel.kressin@hotmail.de" },
    { name = "Tianshu Ouyang", email = "oyts2002@gmail.com" }
]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1,<2",
    "pandas>=2.3.0,<3",
    "python-dotenv>=1.1.1,<2",
    "plotly==6.0",
    "kaleido==0.2.1",
    "scipy==1.13.1",
    "rich>=14.0.0,<15",
    "pre-commit>=4.2.0,<5",
    "ruff>=0.12.1,<0.13",
    "tqdm>=4.67.1,<5",
    "statsmodels>=0.14.4,<0.15",
    "scikit-learn==1.5",
    "krippendorff>=0.8.1,<0.9",
    "jinja2>=3.1.6,<4",
    "pyspellchecker>=0.8.3,<0.9",
    "matplotlib>=3.9.4",
    "distlib>=0.3.9",
    "torch>=2.8.0",
    "openai>=2.41.0",
    "sentence-transformers>=5.1.2",
]

[tool.hatch.build.targets.sdist]
include = ["analysis/oc_pmc"]

[tool.hatch.build.targets.wheel]
include = ["analysis/oc_pmc"]

[tool.hatch.build.targets.wheel.sources]
"analysis/oc_pmc" = "oc_pmc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]
